<resources>
    <string name="app_name">UrbanMessenger</string>

    <!-- Start Fragment strings -->
    <string name="start_fragment_start_button_text">Войти с помощью email</string>

    <!-- Login Fragment strings -->
    <string name="login_fragment_email_field_hint">Email</string>
    <string name="login_fragment_password_field_hint">Password</string>
    <string name="login_fragment_recover_text_link">Забыли пароль?</string>
    <string name="login_fragment_login_button_text">Войти</string>
    <string name="login_fragment_no_account_text">Нет аккаунта?</string>
    <string name="login_fragment_registration_link_text">Зарегистрироваться?</string>

    <!-- Recover Password Fragment strings -->
    <string name="recover_fragment_subtitle_text">Введите адрес электронной почты, чтобы получить инструкции по восстановлению пароля</string>
    <string name="recover_fragment_title_text">Забыл(a) пароль</string>
    <string name="recover_fragment_send_button_text">Отправить</string>
    <string name="recover_fragment_email_field_hint">Введите email</string>

    <!-- Option Menu Item Names -->
    <string name="options_menu_item_about_user_text">Профиль</string>
    <string name="options_menu_item_about_text">О приложении</string>
    <string name="options_menu_item_exit_text">Выйти</string>

    <!-- NavGraphMain Fragments Labels -->
    <string name="nav_graph_about_fragment_label_text">О приложении</string>
    <string name="nav_graph_profile_fragment_label_text">Профиль</string>
    <string name="nav_graph_chats_fragment_label_text">Чаты</string>

    <!-- Profile Fragment strings -->
    <string name="profile_fragment_save_button_text">Сохранить</string>
    <string name="profile_fragment_name_text">Egor</string>
    <string name="profile_fragment_email_text">*****32@gmail.com</string>
    <string name="profile_fragment_method_entry_text">Способ входа Email</string>
    <string name="profile_fragment_verification_text">Не верифицирован</string>
    <string name="profile_fragment_first_name_field_hint">Имя</string>
    <string name="profile_fragment_last_name_field_hint">Фамилия</string>
    <string name="profile_fragment_profession_field_hint">Род занятий</string>
    <string name="profile_fragment_address_field_hint">Адрес</string>
    <string name="profile_fragment_age_field_hint">Возраст</string>


    <!-- Registration Fragment strings -->
    <string name="registration_fragment_email_edit_text_hint">Email</string>
    <string name="registration_fragment_password_edit_text_hint">Password</string>
    <string name="registration_fragment_confirm_password_edit_text_hint">Confirm password</string>
    <string name="registration_fragment_sign_in_button_name_text">Sign In</string>
    <string name="registration_fragment_text_already_have_an_account_login">Already have an account? Login</string>


    <!-- Change photo fragment strings -->
    <string name="change_photo_fragment_choose_photo_button_text">Выбрать изображение</string>
    <string name="change_photo_fragment_save_photo_button_text">Применить изображение</string>
    <string name="change_photo_fragment_default_image_description">DefaultImage</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_notification_channel_id">default_notification_channel_id</string>

    <string name="drawer_menu_item_my_profile">Мой профиль</string>
    <string name="drawer_menu_item_contacts">Контакты</string>
    <string name="drawer_menu_item_help">Поддержка</string>
    <string name="drawer_menu_item_settings">Настройки</string>
    <string name="drawer_menu_item_chats">Чаты</string>
    <string name="drawer_menu_first_divider">Контакты и чаты</string>
    <string name="drawer_menu_second_divider">Поддержка и настройки</string>
    <string name="about_user_fragment_profile_header_id_title">Идентификатор</string>
    <string name="about_user_fragment_profile_header_email">****@gmail.com</string>
    <string name="about_user_fragment_profile_header_username">Username</string>
    <string name="about_user_fragment_profile_header_title">Профиль пользователя</string>
    <string name="about_user_fragment_profile_header_id">32JK4H23gjkh23453gj2hlhl</string>
    <string name="about_user_fragment_block_info_title_name">Имя:</string>
    <string name="about_user_fragment_block_info_title_last_name">Фамилия:</string>
    <string name="about_user_fragment_block_info_title_profession">Род занятий:</string>
    <string name="about_user_fragment_block_info_title_phone">Номер телефона:</string>
    <string name="about_user_fragment_block_info_title_age">Возраст:</string>
    <string name="about_user_fragment_block_info_title_address">Адрес:</string>
    <string name="about_user_fragment_block_info_title_entry_method">Способ входа:</string>
    <string name="about_user_fragment_block_info_value_entry_method">Email</string>
    <string name="about_user_fragment_block_info_value_address">Москва</string>
    <string name="about_user_fragment_block_info_value_age">25</string>
    <string name="about_user_fragment_block_info_value_phone">+79880193232</string>
    <string name="about_user_fragment_block_info_value_profession">Программист</string>
    <string name="about_user_fragment_block_info_value_last_name">Иванов</string>
    <string name="about_user_fragment_block_info_value_name">Егор</string>
    <string name="about_user_fragment_call_button_text">Позвонить</string>
    <string name="about_user_fragment_send_message_button_text">Отправить смс</string>
    <string name="upback_arrow">UpBack</string>

</resources>