<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/chatsFragment">

    <fragment
        android:id="@+id/chatsFragment"
        android:name="com.example.urbanmessenger.ChatsFragment"
        android:label="@string/nav_graph_chats_fragment_label_text"
        tools:layout="@layout/fragment_chats" />
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.example.urbanmessenger.chats.AboutFragment"
        android:label="@string/nav_graph_about_fragment_label_text"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.urbanmessenger.chats.ProfileFragment"
        android:label="@string/nav_graph_profile_fragment_label_text"
        tools:layout="@layout/fragment_profile" />
</navigation>