<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".chats.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profileFragmentHeader"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/main_color_day_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <FrameLayout
        android:id="@+id/userImageBlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profileFragmentHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/profileFragmentHeader"
        android:clickable="true"
        android:focusable="true"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileFragmentUserImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/profile_fragment_user_default_image"
            />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/settingsFragmentChangePhotoButtonBTN"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@drawable/baseline_photo_camera_24"
            app:civ_border_color="@color/hintColorGray"
            app:civ_border_width="0.5dp"
            app:civ_circle_background_color="@color/white"
            android:padding="10dp"
            android:layout_gravity="bottom|end"/>

    </FrameLayout>
    <LinearLayout
        android:id="@+id/mainInfo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/userImageBlock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/profileFragmentUserNameTextView"
            android:text="@string/profile_fragment_name_text"
            style="@style/profile_main_info" />

        <TextView
            android:id="@+id/profileFragmentUserMailTextView"
            android:text="@string/profile_fragment_email_text"
            style="@style/profile_main_info" />

        <TextView
            android:id="@+id/profileFragmentUserEntryMethod"
            android:text="@string/profile_fragment_method_entry_text"
            style="@style/profile_main_info"
            />

        <TextView
            android:id="@+id/profileFragmentUserVerification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_fragment_verification_text"
            android:gravity="center_horizontal"/>

        <EditText
            android:id="@+id/profileFragmentChangeFirstNameTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontalMargin"
            android:layout_marginVertical="@dimen/verticalMargin"
            android:hint="@string/profile_fragment_first_name_field_hint"/>

        <EditText
            android:id="@+id/profileFragmentChangeLastNameTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontalMargin"
            android:layout_marginVertical="@dimen/verticalMargin"
            android:hint="@string/profile_fragment_last_name_field_hint"/>

        <EditText
            android:id="@+id/profileFragmentChangeProfessionTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontalMargin"
            android:layout_marginVertical="@dimen/verticalMargin"
            android:hint="@string/profile_fragment_profession_field_hint"/>

        <EditText
            android:id="@+id/profileFragmentChangeAdressTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontalMargin"
            android:layout_marginVertical="@dimen/verticalMargin"
            android:hint="@string/profile_fragment_adress_field_hint"/>

        <EditText
            android:id="@+id/profileFragmentChangeAgeTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontalMargin"
            android:layout_marginVertical="@dimen/verticalMargin"
            android:hint="@string/profile_fragment_age_field_hint"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center|center_horizontal"
            app:icon="@drawable/profile_fragment_phone_button_icon"
            android:background="@drawable/circlebutton"
            android:layout_marginHorizontal="@dimen/horizontalMargin"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/horizontalMargin"
            android:text="@string/profile_fragment_save_button_text"/>

    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>